filling in extra refs

--- a/references.bib
+++ b/references.bib
@@ -3334,3 +3334,97 @@ url = {http://dx.doi.org/10.1016/j.jad.2014.11.005},
 volume = {173},
 year = {2015}
 }
+
+@article{Yang2011a,
+abstract = {We estimate and partition genetic variation for height, body mass index (BMI), von Willebrand factor and QT interval (QTi) using 586,898 SNPs genotyped on 11,586 unrelated individuals. We estimate that ∼45{\%}, ∼17{\%}, ∼25{\%} and ∼21{\%} of the variance in height, BMI, von Willebrand factor and QTi, respectively, can be explained by all autosomal SNPs and a further ∼0.5-1{\%} can be explained by X chromosome SNPs. We show that the variance explained by each chromosome is proportional to its length, and that SNPs in or near genes explain more variation than SNPs between genes. We propose a new approach to estimate variation due to cryptic relatedness and population stratification. Our results provide further evidence that a substantial proportion of heritability is captured by common SNPs, that height, BMI and QTi are highly polygenic traits, and that the additive variation explained by a part of the genome is approximately proportional to the total length of DNA contained within genes therein.},
+author = {Yang, Jian and Manolio, Teri A and Pasquale, Louis R and Boerwinkle, Eric and Caporaso, Neil and Cunningham, Julie M and de Andrade, Mariza and Feenstra, Bjarke and Feingold, Eleanor and Hayes, M Geoffrey and Hill, William G and Landi, Maria Teresa and Alonso, Alvaro and Lettre, Guillaume and Lin, Peng and Ling, Hua and Lowe, William and Mathias, Rasika A and Melbye, Mads and Pugh, Elizabeth and Cornelis, Marilyn C and Weir, Bruce S and Goddard, Michael E and Visscher, Peter M},
+doi = {10.1038/ng.823},
+issn = {1546-1718},
+journal = {Nature genetics},
+month = {jun},
+number = {6},
+pages = {519--25},
+pmid = {21552263},
+title = {{Genome partitioning of genetic variation for complex traits using common SNPs.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/21552263 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC4295936},
+volume = {43},
+year = {2011}
+}
+
+@article{Yang2011,
+abstract = {For most human complex diseases and traits, SNPs identified by genome-wide association studies (GWAS) explain only a small fraction of the heritability. Here we report a user-friendly software tool called genome-wide complex trait analysis (GCTA), which was developed based on a method we recently developed to address the "missing heritability" problem. GCTA estimates the variance explained by all the SNPs on a chromosome or on the whole genome for a complex trait rather than testing the association of any particular SNP to the trait. We introduce GCTA's five main functions: data management, estimation of the genetic relationships from SNPs, mixed linear model analysis of variance explained by the SNPs, estimation of the linkage disequilibrium structure, and GWAS simulation. We focus on the function of estimating the variance explained by all the SNPs on the X chromosome and testing the hypotheses of dosage compensation. The GCTA software is a versatile tool to estimate and partition complex trait variation with large GWAS data sets.},
+author = {Yang, Jian and Lee, S. Hong and Goddard, Michael E. and Visscher, Peter M.},
+doi = {10.1016/j.ajhg.2010.11.011},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Yang et al. - 2011 - GCTA A tool for genome-wide complex trait analysis.pdf:pdf},
+isbn = {1537-6605 (Electronic)$\backslash$n0002-9297 (Linking)},
+issn = {1537-6605},
+journal = {American journal of human genetics},
+mendeley-groups = {Programs},
+month = {jan},
+number = {1},
+pages = {76--82},
+pmid = {21167468},
+publisher = {The American Society of Human Genetics},
+title = {{GCTA: a tool for genome-wide complex trait analysis.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/21167468 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC3014363 http://dx.doi.org/10.1016/j.ajhg.2010.11.011},
+volume = {88},
+year = {2011}
+}
+
+@article{Hawley2015,
+author = {Hawley, Nicola L. and McGarvey, Stephen T.},
+doi = {10.1007/s11892-015-0594-5},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Hawley, McGarvey - 2015 - Obesity and Diabetes in Pacific Islanders the Current Burden and the Need for Urgent Action.pdf:pdf},
+issn = {1534-4827},
+journal = {Current Diabetes Reports},
+keywords = {diabetes,non-communicable disease,obesity,pacific islands},
+number = {5},
+title = {{Obesity and Diabetes in Pacific Islanders: the Current Burden and the Need for Urgent Action}},
+url = {http://link.springer.com/10.1007/s11892-015-0594-5},
+volume = {15},
+year = {2015}
+}
+
+@misc{RCoreTeam2017,
+address = {Vienna, Austria},
+author = {{R Core Team}},
+institution = {R Foundation for Statistical Computing},
+mendeley-groups = {PPARGC1Apaper},
+title = {{R: A Language and Environment for Statistical Computing}},
+url = {http://www.r-project.org/},
+year = {2017}
+}
+
+@article{Hermisson2017,
+abstract = {1. The tempo and mode of adaptive evolution determine how natural selection shapes patterns of genetic diversity in DNA polymorphism data. While slow mutation-limited adaptation leads to classical footprints of “hard” selective sweeps, these patterns are different when adaptation responds quickly to a novel selection pressure, acting either on standing genetic variation or on recurrent new mutation. In the past decade, corresponding footprints of “soft” selective sweeps have been described both in theoretical models and in empirical data. 2. Here, we summarize the key theoretical concepts and contrast model predictions with observed patterns in Drosophila , humans, and microbes. 3. Evidence in all cases shows that “soft” patterns of rapid adaptation are frequent. However, theory and data also point to a role of complex adaptive histories in rapid evolution. 4. While existing theory allows for important implications on the tempo and mode of the adaptive process, complex footprints observed in data are, as yet, insufficiently covered by models. They call for in-depth empirical study and further model development.},
+author = {Hermisson, Joachim and Pennings, Pleuni S.},
+doi = {10.1111/2041-210X.12808},
+file = {:home/murraycadzow/Dropbox/Papers/Hermisson{\_}et{\_}al-2017-Methods{\_}in{\_}Ecology{\_}and{\_}Evolution.pdf:pdf},
+issn = {2041210X},
+journal = {Methods in Ecology and Evolution},
+keywords = {Drosophila,HIV,adaptation,genetic hitch-hiking,lactase,malaria,selective sweep},
+number = {6},
+pages = {700--716},
+title = {{Soft sweeps and beyond: understanding the patterns and probabilities of selection footprints under rapid adaptation}},
+volume = {8},
+year = {2017}
+}
+
+@article{Mandal2015,
+abstract = {Uric acid, generated from the metabolism of purines, has proven and emerging roles in human disease. Serum uric acid is determined by production and the net balance of reabsorption or secretion by the kidney and intestine. A detailed understanding of epithelial absorption and secretion of uric acid has recently emerged, aided in particular by the results of genome-wide association studies of hyperuricemia. Novel genetic and regulatory networks with effects on uric acid homeostasis have also emerged. These developments promise to lead to a new understanding of the various diseases associated with hyperuricemia and to novel, targeted therapies for hyperuricemia.},
+author = {Mandal, Asim K. and Mount, David B.},
+doi = {10.1146/annurev-physiol-021113-170343},
+file = {:home/murraycadzow/Dropbox/Papers/annurev-physiol-021113-170343.pdf:pdf},
+isbn = {10.1146/annurev-physiol-021113-170343},
+issn = {0066-4278},
+journal = {Annual Review of Physiology},
+keywords = {abcg2,hyperuricemia,slc2a9,urat1,uric acid},
+number = {1},
+pages = {323--345},
+pmid = {25422986},
+title = {{The Molecular Physiology of Uric Acid Homeostasis}},
+url = {http://www.annualreviews.org/doi/10.1146/annurev-physiol-021113-170343},
+volume = {77},
+year = {2015}
+}
+
