--- a/02-Methods.Rmd
+++ b/02-Methods.Rmd
@@ -87,7 +87,7 @@ shapeit2 \
 
 #### PopGenome {#popgenomeMethods}
 
-The PopGenome (v2.2.3, @Pfeifer2014) package for R was used for the calculation of \gls{td}, \gls{fwh}, \gls{fld}, \gls{flf}, \gls{ze}. The selection and neutrality statistics were calculated using a sliding window approach with a window size of 100 kb and a slide of 10 kb. Windows that had fewer than 4 segregating sites were filtered out and window co-ordinates were altered to be +/- 5 kb from the centre of the window. The empirical distribution for each population was used to create a significance threshold. The lower threshold was the 1st percentile and less than zero. The upper significance threshold was the 99th percentile and greater than zero. The greater or less than zero condition was to enable the interpretation of the selection and neutrality statistic results. F~ST~ was also calculated in the same sliding window setup and pairwise for between the Polynesian populations, and also the other populations. F~ST~ values that were negative were set to 0.
+The PopGenome package (v2.2.3, @Pfeifer2014) for R was used for the calculation of \gls{td}, \gls{fwh}, \gls{fld}, \gls{flf}, \gls{ze}. The selection and neutrality statistics were calculated using a sliding window approach with a window size of 100 kb and a slide of 10 kb. Windows that had fewer than 4 segregating sites were filtered out and window co-ordinates were altered to be +/- 5 kb from the centre of the window. The empirical distribution for each population was used to create a significance threshold. The lower threshold was the 1st percentile and less than zero. The upper significance threshold was the 99th percentile and greater than zero. The greater or less than zero condition was to enable the interpretation of the selection and neutrality statistic results. F~ST~ was also calculated in the same sliding window set-up and pair-wise for between the Polynesian populations, and also the other populations. F~ST~ values that were negative were set to 0.
 
 The ancestral allele was used as had been annotated from the 1000 Genomes Phase 3 \gls{vcf} file where possible for use as the out-group population. A new sample identified as 'Ancestor' was included in the phased \gls{vcf} and for each marker the genotype for this sample was set as the homozygote for either the reference or alternate allele dependent on the ancestral allele matching, otherwise the Ancestor genotype was set to missing. When the phased \gls{vcf} files were loaded into PopGenome, populations were identified using panel files which were white-space delimited files with sample id, population, and super population as the columns. The out-group population was set to be that of the Ancestor sample.
 
@@ -192,12 +192,13 @@ Custom Views were created to join the supplemental tables to the main tables.
 ```
 
 
-#### PCA - eigenstrat
+#### PCA - eigenstrat {#pca}
 
-The first 10 principle components were calculated using smartPCA v13050 from Eigensoft v6.0.1 [@ref]. All chomosomes were combined into a single \gls{vcf} file and then the independent markers were found by using a sliding window to remove markers that had an R^2^ > 0.2 in windows of 50 kbp and a slide of 5 markers. 
+The first 10 principle components were calculated using smartPCA v13050 from Eigensoft v6.0.1 [@Price2006]. All chromosomes were combined into a single \gls{vcf} file and then the independent markers were found by using a sliding window to remove markers that had an R^2^ > 0.2 in windows of 50 kbp and a slide of 5 markers. 
 
 ```{r eigenstrat code, engine='bash', eval = FALSE}
-dir=/Volumes/scratch/merrimanlab/murray/working_dir/coreExome_selection/NZ_coreExome_1kgp/analysis/PCA/indiv_pops
+scratch=/Volumes/scratch/merrimanlab/murray/working_dir/
+dir=$scratch/coreExome_selection/NZ_coreExome_1kgp/analysis/PCA/indiv_pops
 #combine the chromosomes
 bcftools concat \
   -O v \
@@ -248,8 +249,10 @@ smartpca.perl \
 #### Admixture analysis {#admixture}
 
 Admixture analysis was performed using ADMIXTURE v1.3.0 [@ref]. \gls{vcf} files for all autosomes were concatenated and the independent markers were selected by a moving window of 50 kbp sliding by 10 markers and removing markers with an R^2^ of more that 0.1. This was done using plink v1.9b4.9. Following this cross validation was performed to find the best value of K, for K 1 to 15. K = 11 had the lowest cross-validation error
+
 ```{r admixture k, engine = 'bash', eval = FALSE}
-dir=/Volumes/scratch/merrimanlab/murray/working_dir/coreExome_selection/NZ_coreExome_1kgp/analysis/admixture
+scratch=/Volumes/scratch/merrimanlab/murray/working_dir/
+dir=$scratch/coreExome_selection/NZ_coreExome_1kgp/analysis/admixture
 
 bcftools concat \
   -O v \
@@ -340,18 +343,20 @@ names(study_fam) <- c('FID','sample','PID','MID','SEX','AFF')
 study_fam <- left_join(study_fam, panel %>% filter(!pop %in% c('NAD','EPN','WPN','POL')), by = 'sample')
 ```
 
-```{r, echo = FALSE}
+```{r cvproj, fig.cap = '(ref:cvproj)', echo = FALSE}
 k_cv <- read.table('~/data/NZ_coreExome_1kgp/admixture/projected/CV_error.txt', header = FALSE)
 ggplot(k_cv, aes(x = V1, y = V2)) + geom_line() + geom_point() + labs(x = 'K',y = 'Cross Validation Error') + geom_point(data = k_cv %>% filter(min(V2) == V2), aes(x = V1, y = V2),color = 'red', shape = 4, size = 4, inherit.aes = FALSE) + theme_bw()
 ```
 
-```{r, echo = FALSE, fig.cap='(ref:cvproj)'}
+(ref:cvproj) Admixture cross-validation error for different K values from projecting components from 1000 Genomes Project populations of AFR, EAS, EUR, and SAS
+
+```{r, echo = FALSE}
 # barplot of the reference proportions
 cbind(ref_fam, ref) %>% gather(., "V","Q",9:NCOL(.)) %>% mutate(super_sample = paste0(super_pop,'_',sample), facet_pop = paste(super_pop, pop)) %>% ggplot(., aes(x = super_sample, y = Q)) + geom_bar(stat = "identity", position = 'stack', aes(fill = V)) + facet_wrap(super_pop~pop, scales = "free_x", ncol = 6) + theme_bw() + theme(axis.title.x = element_blank(), axis.text.x = element_blank(), axis.ticks.x = element_blank()) + scale_y_continuous(expand = c(0,0)) 
 
 ```
 
-(ref:cvproj) Admixture cross-validation error for different K values from projecting components from 1000 Genomes Project populations of AFR, EAS, EUR, and SAS
+
 
 ```{r, echo = FALSE}
 # admixed pops that were projected onto
@@ -368,18 +373,18 @@ cbind(study_fam, study) %>% gather(., "V","Q",9:NCOL(.)) %>% mutate(super_sample
 - V9 was SAS
 
 
-
+NZC is extremely similar to GBR and CEU
 
 ### GWAS
 
-Uk Biobank GWAS
+UK Biobank GWAS
 
 
 #### 
 
 #### Heritability Analysis
 
-The \gls{gcta} v1.26.0 [@Yang2011; @Yang2011a] was used to calculate the proportion of heritability explained. A genetic relationship matrix was calculated 
+The \gls{gcta} v1.26.0 [@Yang2011; @Yang2011a] was used to calculate the proportion of heritability explained. First the genome was partitioned into chromosomes, and a \gls{grm} was created for each chromosome. Next genetic variance explained was calculated using a general population prevalence for gout of 2%.
 
 
 ```{r, engine='bash', eval=FALSE}
@@ -436,7 +441,7 @@ done
 
 ### Variant Annotation
 
-Variant annotation of \gls{vcf} files was performed using snpEff vXXX [@snpeff] with the homo sapiens GRCh37 database.
+Variant annotation of \gls{vcf} files was performed using snpEff v4.2 [@snpeff] with the homo sapiens GRCh37 database.
 
 
 ### Pathway Analysis
@@ -482,20 +487,18 @@ urldate = {2015-08-18}
 }
 -->
 
-The \glsdesc{1kgp} was an international consortium that was established in 2007 to provide a comprehensive record of human genetic variation. The project consisted of three main data phases. A pilot phase that whole-genome sequenced 179 individuals from four populations at low coverage (2-4x), along with high coverage sequencing for two trios (mother, father, and child), and exon targeted sequencing for 697 individuals from seven populations [@1KGP2010]. The second main data phase provided sequencing data for 1092 individuals from 14 populations. This sequencing data was a combination of low coverage whole-genome and exon sequencing [@1KGP2012]. The third main phase (Phase 3) was a dataset consisting of low coverage whole-genome sequencing, deep exome sequencing, and dense microarray genotyping for 2504 individuals from 26 populations [@1KGP2015snp]. The 1000 Genomes data set used was the Phase 3 release^[ftp://ftp.1000genomes.ebi.ac.uk/vol1/ftp/release/20130502/ accessed 20 March 2017].
+The \glsdesc{1kgp} was an international consortium that was established in 2007 to provide a comprehensive record of human genetic variation. The project consisted of three main data phases. A pilot phase that whole-genome sequenced 179 individuals from four populations at low coverage (2-4x), along with high coverage sequencing for two trios (mother, father, and child), and exon targeted sequencing for 697 individuals from seven populations [@1KGP2010]. The second main data phase provided sequencing data for 1092 individuals from 14 populations. This sequencing data was a combination of low coverage whole-genome and exon sequencing [@1KGP2012]. The third main phase (Phase 3) was a dataset consisting of low coverage whole-genome sequencing, deep exome sequencing, and dense \gls{snp} array genotyping for 2504 individuals from 26 populations [@1KGP2015snp]. The 1000 Genomes data set used was the Phase 3 release^[ftp://ftp.1000genomes.ebi.ac.uk/vol1/ftp/release/20130502/ accessed 20 March 2017].
 
 
 ```{r populations, results = 'asis', echo = FALSE}
-read.csv('~/Git_repos/SelectionDW_ETL/data/populations.csv', stringsAsFactors = FALSE) %>% filter(!pop %in% c("EPN","OMN","AXI","WPN","NAD") & superPop != "") %>% arrange(superPop, pop) %>% mutate(pop = if_else(pop %in% c("NZM","NZC","CIM","SAM","TON"), paste0(pop,'*'), pop))%>% select("Population" = pop, "Description" = description, "Genotype\nPlatform" = genotypePlatform) %>%   knitr::kable(format = 'latex', booktabs = TRUE, caption = '(\\#tab:populations) Description of Populations') %>% kableExtra::group_rows("African Super Population (AFR)", 1,7) %>% kableExtra::group_rows("Ad Mixed American Super Population (AMR)", 8, 11) %>% kableExtra::group_rows("East Asian Super Population (EAS)", 12, 16) %>% kableExtra::group_rows("European Super Population (EUR)", 17, 22) %>% kableExtra::group_rows("Polynesian Super Population (POL)*", 23, 26) %>% kableExtra::group_rows("South Asian Super Population (SAS)", 27, 31) %>% kableExtra::add_footnote("NZC, NZM, TON, SAM, and CIM are from 'Genetics of Aoteroa' and are not 1000 Genomes Project populations", notation = "symbol") %>% kableExtra::kable_styling(font_size = 8)
+
+read.csv('data/02-populations.csv', stringsAsFactors = FALSE) %>% left_join(., panel %>% group_by(pop) %>% tally(), by = 'pop') %>% filter(!pop %in% c("EPN","OMN","AXI","WPN","NAD") & superPop != "") %>% arrange(superPop, pop) %>% mutate(pop = if_else(pop %in% c("NZM","NZC","CIM","SAM","TON"), paste0(pop,'*'), pop))%>% select("Population" = pop, "Description" = description, n, "Genotype\nPlatform" = genotypePlatform) %>%   knitr::kable(format = 'latex', booktabs = TRUE, caption = '(\\#tab:populations) Description of Populations') %>% kableExtra::group_rows("African Super Population (AFR)", 1,7) %>% kableExtra::group_rows("Ad Mixed American Super Population (AMR)", 8, 11) %>% kableExtra::group_rows("East Asian Super Population (EAS)", 12, 16) %>% kableExtra::group_rows("European Super Population (EUR)", 17, 22) %>% kableExtra::group_rows("Polynesian Super Population (POL)*", 23, 26) %>% kableExtra::group_rows("South Asian Super Population (SAS)", 27, 31) %>% kableExtra::add_footnote("NZC, NZM, TON, SAM, and CIM are from 'Genetics of Aoteroa' and are not 1000 Genomes Project populations", notation = "symbol") %>% kableExtra::kable_styling(font_size = 8)
 ```
 
 
-### Genetics of Gout in Aoteroa
+### Genetics of Gout in Aotearoa
 
-The genetics of Gout in Aoteroa study is a case-control cohort with recruitment mainly from the Auckland, Wellington, Christchurch and Dunedin regions of New Zealand. Individuals were asked to fill in a questionaire regarding demographics information, clinical information, and food consumption at the time of recruitment. 
-
-Individuals from this study were genotyped on Illumina CoreExome v24 microarray. A subset of individuals in this study were also whole genome sequenced at low coverage (XXX).
-
+The genetics of Gout in Aotearoa study is a case-control cohort with recruitment mainly from the Auckland, Wellington, Christchurch and Dunedin regions of New Zealand. Individuals were asked to fill in a questionnaire regarding demographics information, clinical information, and food consumption at the time of recruitment. Individuals from this study were genotyped on Illumina CoreExome v24  \gls{snp} array.
 
 ```{r, eval = FALSE, echo = FALSE, include = FALSE}
 
@@ -546,11 +549,11 @@ Mean grandparent ancestry is the proportion of grandparents self-reported as bel
 ```
 #### CoreExome
 
-The Infinium CoreExome-24 beadchip is a genotyping platform available from Illumina. It comprises a core set of 551,839 markers with a mean density of XXX. Genotyping quality control was performed following the protocol from @Guo2014 and the Illumina GenomeStudio best practice guidelines. Illumina’s GenomeStudio v2011.1 genotyping module v1.9.4 was used for the initial calling of genotypes. Samples were exported from Genome Studio that had a call rate > 98%, markers were zeroed if they were < 95%. Individuals who had not reported their sex were assigned their genetic sex where possible. Individuals were removed where genetic and reported sex did not match. The cohort was checked for genotype consistency between duplicated markers, with duplicates subsequently removed.
+The Infinium CoreExome-24 beadchip is a genotyping platform available from Illumina and comprises a core set of 551,839 markers. Genotyping quality control was performed following the protocol from @Guo2014 and the Illumina GenomeStudio best practice guidelines. Illumina’s GenomeStudio v2011.1 genotyping module v1.9.4 was used for the initial calling of genotypes. Samples were exported from Genome Studio that had a call rate > 98%, markers were zeroed if they were < 95%. Individuals who had not reported their sex were assigned their genetic sex where possible. Individuals were removed where genetic and reported sex did not match. The cohort was checked for genotype consistency between duplicated markers, with duplicates subsequently removed.
 
-Heterozygosity and depression of genetic variation was also checked for outliers.
+Samples were also checked for outliers in heterozygosity and depression of genetic variation. 
 
-`r  lapply(1:22, function(x){diff(markers %>% filter(chrom ==x) %>% arrange(chrom_start) %>% pull(chrom_start))}) %>% unlist() %>%  mean() %>% round_dp(., 0)` = density of markers used
+Markers were subsetted to only include bi-allelic \gls{snp}s, with a final marker number of `r NROW(markers)` and density of `r  lapply(1:22, function(x){diff(markers %>% filter(chrom ==x) %>% arrange(chrom_start) %>% pull(chrom_start))}) %>% unlist() %>%  mean() %>% round_dp(., 0)` bp/marker.
 
 Relatedness between individuals was assessed through inheritance by state using Plink2 (v1.9b3.32) and a pedigree of created to 
 Duplicates and first degree relations were excluded.
@@ -601,18 +604,16 @@ Clinical Information
 
 
 
-\newpage
-\blandscape
 
 
-
-
-```{r clinInfoCE, echo = FALSE, results = 'asis', message = FALSE, warning=FALSE}
-pander::pandoc.table(ce_clinical_table(), caption = ' (\\#tab:clinInfoCE) Clinical information for each core Exome population', split.cells = 10 )
+```{r, warning= FALSE, message = FALSE, echo = FALSE}
+ce_clinical_table() %>% kable(., col.names = c("", rep(c("Control","Gout"), 3)), booktabs = TRUE, format = 'latex', caption = ' (\\#tab:clinInfoCE) Clinical information for each core Exome population') %>% add_header_above(., c("", "European" = 2, "Eastern Polynesian"= 2, "Wester Polynesian" = 2)) %>% kable_styling(latex_options = 'scale_down')
 ```
 
-\elandscape
-\newpage
+
+
+
+
 
 
 ```{r, echo = FALSE, results = 'asis', message = FALSE, warning=FALSE, eval = FALSE}
@@ -636,53 +637,30 @@ Analysis groups were created by using genetic ancestry for the following populat
 
 Table \@ref(tab:cePopTable) shows the break down of 
 
-#### Polynesian Sequences
-
-<!--
-n | ~90
-mean coverage |  Y x
--->
-
-### Reference datasets
-
-#### Markdown table
-
-Table: (\#tab:refDatasets) _Reference Datasets_
-
-| Name | Date | URL |
-|:-------------------------------|--------------------------|--------------------------------------------------------------|
-|1000 Genomes Project Phase 3 release 5 |17 Sept 2014| |
-|1000 Genomes Project Phase 3 release 5 |20 Mar 2017| http://ftp.1000genomes.ebi.ac.uk/vol1/ftp/release/20130502/ |
-|1000 Genomes Phase 3 phased haplotypes |14 Dec 2014| https://mathgen.stats.ox.ac.uk/impute/1000GP_Phase3.html |
-|Human Genome Reference FASTA | 5 Aug 2014 | ftp://ftp.1000genomes.ebi.ac.uk:21/vol1/ftp/technical/reference/phase2_reference_assembly_sequence/hs37d5.fa.gz |
-|Human Ancestral Allele FASTA | 6 Aug 2014 | ftp://ftp.ensembl.org/pub/release-66/fasta/ancestral_alleles/homo_sapiens_ancestor_GRCh37_e66.tar.bz |
 
 
-This used table \@ref(tab:refDatasets) for the stuff
-
-\newpage
 
 
-## Selection dataset {#selectionDataset}
+### Selection dataset {#selectionDataset}
 
-### Sample selection
+#### Sample selection
 
-Principle components were calculated for all individuals genotyped on the coreExome mircoarray using SmartPCA (EIGENSOFT v6.0.1, see PCA section) using 2858 ancestry informative markers (@Guo2014 supplementary material). The first 10 eigenvectors were outputted, with no outlier removal or population size limit. Individuals were removed who did not match between self reported ethnicity of grandparents and their genetic ancestry, or if they had self reported their ethnicity as unknown.
+Principle components were calculated for all individuals genotyped on the coreExome mircoarray using SmartPCA (EIGENSOFT v6.0.1, see section \@ref(pca)) using 2858 ancestry informative markers (@Guo2014 supplementary material). The first 10 eigenvectors were outputted, with no outlier removal or population size limit. Individuals were removed who did not match between self reported ethnicity of grandparents and their genetic ancestry, or if they had self reported their ethnicity as unknown.
 
-Principle component 2 was identified as providing the best separation of European ancestry from Polynesian ancestry, and PC4 had the best separation of East Polynesian from West Polynesian populations. Individuals were then filtered for European or Polynesian ancestry. To determine the boundaries of the population groups, the mean +/- 1 sd for PC2 and 4 were used (Figure \@ref(fig:cePCA)).
+Principle component 2 was identified as providing the best separation of European ancestry from Polynesian ancestry, and PC4 had the best separation of East Polynesian from West Polynesian populations. Individuals were then filtered for European or Polynesian ancestry. To determine the boundaries of the population groups, the mean +/- 1 SD for PC2 and 4 were used (Figure \@ref(fig:cePCA)).
 
 (ref:cePCA) Principle compenents 2 and 4 for individuals used in the selection analysis.
 
-```{r, fig.cap = '(ref:cePCA)', echo = FALSE}
+```{r cePCA, fig.cap = '(ref:cePCA)', echo = FALSE, out.width = "70%"}
 knitr::include_graphics('images/02_methods/pca_plot.png')
 ```
 
 
-### Core Exome - Filter individuals and markers 
+#### Core Exome - Filter individuals and markers 
 
-To create a data set to calculate selection statistics, a subset of the individuals genotyped on the Illumina CoreExome chip were combined with all of the individuals in the 1000 Genomes Project phase 3 release. Before the data sets could be combined there were a series of steps that were performed.
+To create a data set to calculate selection statistics, a subset of the individuals genotyped on the Illumina CoreExome chip were combined with all of the individuals in the \gls{1kgp} phase 3 release. Before the data sets could be combined there were a series of steps that were performed.
 
-The first step was to identify and remove individuals who had failed the QC, and keep only the individuals who had been selected through \gls{pca} and had a genotyping rate of at least 95%. Markers were filtered to remove \gls{indel}s so that only \gls{snp}s remained.
+The first step was to identify and remove individuals who had failed quality control, and keep only the individuals who had been selected through \gls{pca} and had a genotyping rate of at least 95%. Markers were filtered to remove \gls{indel}s so that only \gls{snp}s remained.
 
 ```{r, engine = 'bash', eval = FALSE}
 parallel -j 11 '
@@ -699,7 +677,7 @@ parallel -j 11 '
     ' ::: $(seq 1 22)
 ```
 
-The second step was to ensure that all the core Exome markers were normalised against the hs37d5 human reference. This was to make sure the REF/ALT alleles would match with the 1000 Genomes Project phase 3 for a successful merge after phasing and subject selection. Shapeit2 was then used to find SNP alleles that disagreed with the 1000 Genomes Project haplotype reference and phase the core Exome markers. This step also reduced markers to biallelic positions and removed duplicate positions.
+The second step was to ensure that all the CoreExome markers were normalised against the hs37d5 human reference. This was to make sure the REF/ALT alleles would match with the \gls{1kgp} phase 3 for a successful merge after phasing and subject selection. SHAPEIT2 was then used to find SNP alleles that disagreed with the \gls{1kgp} haplotype reference and phase the CoreExome markers. This step also reduced markers to bi-allelic positions and removed duplicate positions.
 
 ```{r, engine = 'bash', eval = FALSE}
 parallel -j 11 '
@@ -707,7 +685,7 @@ parallel -j 11 '
     -N \
     --rm-dup any \
     --check-ref s \
-    -f /Volumes/BiocArchive/archive/merrimanlab/reference_files/FASTA/hs37d5/hs37d5.fa \
+    -f /Volumes/archive/merrimanlab/reference_files/FASTA/hs37d5/hs37d5.fa \
     -O v QC1_7-FullMerge1.0and1.1_ExDup_MattBrown_Czech-plus_correctAff.chr{}.vcf | \
   bcftools view \
     -m 2 \
@@ -718,14 +696,15 @@ parallel -j 11 '
 
 ```
 
-After normalisation, the vcf files were phased using the 1000 Genomes Project phase 3 reference haplotypes as described in section \@ref(phase).
+After normalisation, the \gls{vcf} files were phased using the 1000 Genomes Project phase 3 reference haplotypes as described in section \@ref(phase).
 
-### Merge NZ coreExome with 1000 Genomes Project
+#### Merge NZ coreExome with 1000 Genomes Project
 
-In order to efficiently merge the data sets, the intersection of the markers from the 1kgp dataset and the coreExome was found. This was done by extracting the marker positions and alleles from the coreExome data and then matching these to the marker positions extracted from the 1000 Genomes Project phase 3. The 1000 Genomes Project phase 3 markers were also filtered to remove non biallelic SNPs.
+In order to efficiently merge the data sets, the intersection of the markers from the \gls{1kgp} dataset and the CoreExome was found. This was done by extracting the marker positions and alleles from the coreExome data and then matching these to the marker positions extracted from the \gls{1kgp} phase 3. The \gls{1kgp} phase 3 markers were also filtered to remove non bi-allelic \gls{snp}s.
 
 ```{r, engine = 'bash', eval = FALSE}
 # extract markers from core exome
+archive1kg=/Volumes/archive/merrimanlab/reference_files/VCF/1000Genomes_vcf_files
 parallel '
   zgrep \
     -v "^#" QC1_7-FullMerge1.0and1.1_ExDup_MattBrown_Czech-plus_correctAff_norm.chr{}.phased.vcf.gz |\
@@ -733,7 +712,7 @@ parallel '
     ' ::: $(seq 1 22)
 
 # extract 1000 Genomes markers
-# working dir: /Volumes/BiochemXsan/scratch/merrimanlab/murray/working_dir/coreExome_selection/NZ_coreExome_1kgp/data/Phase3_v5
+# working dir: /Volumes/scratch/merrimanlab/murray/working_dir/coreExome_selection/NZ_coreExome_1kgp/data/Phase3_v5
 parllel '
   bcftools view \
     -O v \
@@ -741,7 +720,7 @@ parllel '
     -M 2 \
     -v snps \
     -o - \
-    /Volumes/BiocArchive/archive/merrimanlab/reference_files/VCF/1000Genomes_vcf_files/Phase3_March2017/ALL.chr{}.phase3_shapeit2_mvncall_integrated_v5a.20130502.genotypes.vcf.gz |\
+    $archive1kg/Phase3_March2017/ALL.chr{}.phase3_shapeit2_mvncall_integrated_v5a.20130502.genotypes.vcf.gz |\
   grep -v "^#" |\
   cut -f 1,2,4,5 > 1kgp_chr{}_biallelic_markers.txt 
   ' ::: $(seq 1 22)
@@ -752,17 +731,22 @@ An R script was created in order to merge the two marker lists based on chromoso
 
 ```{r, eval=FALSE}
 # on merriserver
+scratch="/Volumes/scratch/merrimanlab/murray/working_dir/"
 ce_markers <- data.frame()
 tmp_list <- list()
 for(i in 1:22){
-  tmp_list[[i]] <- read.table(file = paste0('/Volumes/BiochemXsan/scratch/merrimanlab/murray/working_dir/coreExome_selection/NZ_coreExome_1kgp/data/NZ_coreExome/coreExome_chr',i,'_biallelic_markers.txt'), header=FALSE)
+  tmp_list[[i]] <- read.table(file = paste0(
+    scratch,'coreExome_selection/NZ_coreExome_1kgp/data/NZ_coreExome/coreExome_chr',
+    i,'_biallelic_markers.txt'), header=FALSE)
 }
 ce_markers <- do.call(rbind, tmp_list)
 
 kg_markers <- data.frame()
 tmp_list2 <- list()
 for(i in 1:22){
-  tmp_list2[[i]] <- read.table(file= paste0('/Volumes/BiochemXsan/scratch/merrimanlab/murray/working_dir/coreExome_selection/NZ_coreExome_1kgp/data/Phase3_v5/1kgp_chr',i,'_biallelic_markers.txt'), header=FALSE)
+  tmp_list2[[i]] <- read.table(file= paste0(
+    scratch,'coreExome_selection/NZ_coreExome_1kgp/data/Phase3_v5/1kgp_chr',
+    i,'_biallelic_markers.txt'), header=FALSE)
   tmp_list2[[i]] <-  tmp_list2[[i]][ tmp_list2[[i]][,2] %in% tmp_list[[i]][,2],]
  
   print(i)
@@ -772,10 +756,11 @@ ce_kg <- merge(ce_markers, kg_markers, by = c("V1","V2","V3","V4"))
 write.table(file = 'ce_1kg_matched_markers.txt', ce_kg[,c(1,2)], row.names = FALSE, col.names=FALSE, quote=FALSE)
 ```
 
-Once the combined marker list was created, both the core exome and 1000 Genomes Project data sets had have their markers filtered to this consensus set.
+Once the combined marker list was created, both the CoreExome and \gls{1kgp} data sets had have their markers filtered to this consensus set.
 ```{r, engine = 'bash', eval = FALSE}
 # working dir: /Volumes/BiochemXsan/scratch/merrimanlab/murray/working_dir/coreExome_selection/NZ_coreExome_1kgp/data/Phase3_v5
 # filter 1000 Genomes markers
+archive1kg=/Volumes/archive/merrimanlab/reference_files/VCF/1000Genomes_vcf_files
 parallel '
   bcftools view 
     -R ../ce_1kg_matched_markers.txt \
@@ -784,11 +769,11 @@ parallel '
     -M 2 \
     -v snps \
     -o ALL.chr{}.phase3_shapeit2_mvncall_integrated_v5a.20130502.genotypes.biallelic_ce_1kg_matched.vcf.gz \
-    /Volumes/BiocArchive/archive/merrimanlab/reference_files/VCF/1000Genomes_vcf_files/Phase3_March2017/ALL.chr{}.phase3_shapeit2_mvncall_integrated_v5a.20130502.genotypes.vcf.gz 
+    $archive1kg/Phase3_March2017/ALL.chr{}.phase3_shapeit2_mvncall_integrated_v5a.20130502.genotypes.vcf.gz 
   ' ::: $(seq 1 22)
 
 
-# working dir: /Volumes/BiochemXsan/scratch/merrimanlab/murray/working_dir/coreExome_selection/NZ_coreExome_1kgp/data/NZ_coreExome/
+# working dir: /Volumes/scratch/merrimanlab/murray/working_dir/coreExome_selection/NZ_coreExome_1kgp/data/NZ_coreExome/
 # filter coreExome markers
 parallel '
   bcftools view \
@@ -802,7 +787,7 @@ parallel '
   ' ::: $(seq 1 22)
 
 # merge 1kgp and nz coreexome
-# working dir: /Volumes/BiochemXsan/scratch/merrimanlab/murray/working_dir/coreExome_selection/NZ_coreExome_1kgp/data/
+# working dir: /Volumes/scratch/merrimanlab/murray/working_dir/coreExome_selection/NZ_coreExome_1kgp/data/
 parallel 
   'bcftools merge \
     -O z \
@@ -814,7 +799,7 @@ parallel
 
 Sample identifiers were then updated to match the panel file that describe the population and super population an individual belonged to.
 ```{r, engine = 'bash', eval = FALSE}
-# working dir: /Volumes/BiochemXsan/scratch/merrimanlab/murray/working_dir/coreExome_selection/NZ_coreExome_1kgp/data/
+# working dir: /Volumes/scratch/merrimanlab/murray/working_dir/coreExome_selection/NZ_coreExome_1kgp/data/
 for i in $(seq 1 22)
 do 
   zcat NZ_1KGP.chr$i.phased.vcf.gz |\
@@ -830,7 +815,7 @@ do
 done
 ```
 
-Principle components for the merged 1000 Genomes Project data and the New Zealand samples showed in the first two components that the \gls{afr}, \gls{eur}, \gls{sas} super populations all formed separate groupings. \gls{eas} and \gls{pol} were extrememly similar in PC1 but the \gls{pol} populations were spread with PC2, with the majority of the spread being accounted for by the Eastern Polynesian populations whereas the Western Polynesian populations had a tight grouping at -0.025 on PC2, slightly below the \gls{eas} group. This can be observed when PC6 is used to separate the Polynesian populations (Figure \@ref(fig:polPCA))
+Principle components for the merged \gls{1kgp} data and the New Zealand samples showed in the first two components that the \gls{afr}, \gls{eur}, \gls{sas} super populations all formed separate groupings. \gls{eas} and \gls{pol} were extremely similar in PC1 but the \gls{pol} populations were spread with PC2, with the majority of the spread being accounted for by the Eastern Polynesian populations whereas the Western Polynesian populations had a tight grouping at -0.025 on PC2, slightly below the \gls{eas} group. This can be observed when PC6 is used to separate the Polynesian populations (Figure \@ref(fig:polPCA)).
 
 (ref:allpopPCA) Principle components 1 and 2 for all populations, coloured by super population grouping.
 
@@ -845,21 +830,34 @@ eigen %>%  ggplot(., aes(x = PC1, y = PC2, colour = super_pop)) + geom_point() +
 
 (ref:eurPCA) Principle components 1 and 2 for populations of the European Super Population.
 
-```{r eurPca, fig.cap = '(ref:eurPca)', echo = FALSE}
+```{r eurPCA, fig.cap = '(ref:eurPCA)', echo = FALSE}
 #eigen %>%  filter(super_pop == 'EUR') %>% ggplot(., aes(x = PC1, y = PC2, colour = pop)) + geom_point() + theme_bw() + guides(colour  = guide_legend(title = "Population"))
 
-eigen %>%  filter(super_pop == 'EUR') %>% ggplot(., aes(x = PC1, y = PC2, shape = pop, colour = super_pop)) + geom_point(size = 2) + theme_bw() + scale_color_manual(values = c(EUR = '#00BFC4')) + guides(shape  = guide_legend(title = "Population")) + scale_shape_manual(values = c(CEU = 0, NZC = 1, GBR = 2, IBS = 3, FIN = 4, TSI = 5))
+eigen %>%  filter(super_pop == 'EUR') %>% ggplot(., aes(x = PC1, y = PC2, shape = pop, colour = super_pop)) + geom_point(size = 2) + theme_bw() + scale_color_manual(values = c(EUR = '#00BFC4')) + guides(shape  = guide_legend(title = "Population"), colour = guide_legend(title = "Super Population")) + scale_shape_manual(values = c(CEU = 0, NZC = 1, GBR = 2, IBS = 3, FIN = 4, TSI = 5))
 ```
 
-(ref:polPCA)  Principle components 2 and 6 for the Polynesian populations
+(ref:polPCA)  Principle components 2 and 6 for the Polynesian populations.
 
 ```{r polPCA, fig.cap = '(ref:polPCA)', echo = FALSE}
-eigen %>%  filter(super_pop == 'POL') %>% ggplot(., aes(x = PC6, y = PC2, shape = pop, colour = super_pop)) + geom_point(size = 2) + theme_bw() + scale_color_manual(values = c(POL = '#619CFF')) + scale_shape_manual(values = c("CIM" = 0,"NZM" = 1, "TON" = 2, "SAM" = 3)) + guides(size = FALSE)
+eigen %>%  filter(super_pop == 'POL') %>% ggplot(., aes(x = PC6, y = PC2, shape = pop, colour = super_pop)) + geom_point(size = 2) + theme_bw() + scale_color_manual(values = c(POL = '#619CFF')) + scale_shape_manual(values = c("CIM" = 0,"NZM" = 1, "TON" = 2, "SAM" = 3)) + guides(size = FALSE) + guides(shape  = guide_legend(title = "Population"), colour = guide_legend(title = "Super Population"))
 ```
 
 
-There was no distinction between the \gls{ceu}, \gls{gbr}, and \gls{nzc} populations (Figure \@ref(fig:eurPca)), this indicated that the use of chip versus sequence data wasn't a major source of variability in the dataset. In the combined dataset the Polynesian populations where split into Eastern and Western Polynesian sub-groups with PC6 (Figure \@ref(fig:polPCA))
+There was no distinction between the \gls{ceu}, \gls{gbr}, and \gls{nzc} populations (Figure \@ref(fig:eurPCA)), this indicated that the use of chip versus sequence data wasn't a major source of variability in the dataset. In the combined dataset the Polynesian populations where split into Eastern and Western Polynesian sub-groups with PC6 (Figure \@ref(fig:polPCA)).
 
 
+### Reference datasets
+
+Table \@ref(tab:refDatasets) provides the name of the dataset and the date it was accessed and the url from which the dataset was downloaded. These datasets were incorporated into many of the analysis steps.
+
+Table: (\#tab:refDatasets) _Reference Datasets_
+
+| Name | Date | URL |
+|:-------------------------------|--------------------------|--------------------------------------------------------------|
+|1000 Genomes Project Phase 3 release 5 |17 Sept 2014| |
+|1000 Genomes Project Phase 3 release 5 |20 Mar 2017| http://ftp.1000genomes.ebi.ac.uk/vol1/ftp/release/20130502/ |
+|1000 Genomes Phase 3 phased haplotypes |14 Dec 2014| https://mathgen.stats.ox.ac.uk/impute/1000GP_Phase3.html |
+|Human Genome Reference FASTA | 5 Aug 2014 | ftp://ftp.1000genomes.ebi.ac.uk:21/vol1/ftp/technical/reference/phase2_reference_assembly_sequence/hs37d5.fa.gz |
+|Human Ancestral Allele FASTA | 6 Aug 2014 | ftp://ftp.ensembl.org/pub/release-66/fasta/ancestral_alleles/homo_sapiens_ancestor_GRCh37_e66.tar.bz |
 
 
